--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,1 +1,2 @@
 Installed packages [pip]: pandas, fastmeteo, matplotlib, openap, seaborn, cartopy
+run: pip install --upgrade git+https://github.com/junzis/openap
